# js-framework-benchmark

./: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc.json  .travis.yml  CONTRIBUTING.md  Chrome_Results.ods  Dockerfile  Linux_results.ods  README.md  build.js  check-obsolete.js  checkObsolete.js  circle.yml  cleanup.js  cleanup.sh  cli.js  configure-styles.js  configureStyles.js  copy.js  docker-rebuil-all.js  docker-rebuild.js  eslint.config.js  index.html  install.js  lefthook.yml  lerna.json  lws.config.js  package-lock.json  package.json  push_results.sh  rebuild-all.js  rebuild-build-single.js  rebuild-check-single.js  rebuild-single.js  rebuild.js  results.html  (+5 more)
.circleci/: config.yml
__/keyed/wasm-bindgen/: Cargo.toml
__/non-keyed/simi/: Cargo.toml  index.html  js_framework_benchmark_simi.js  js_framework_benchmark_simi_bg.js  package-lock.json
__/non-keyed/simi/src/: lib.rs
broken-frameworks/keyed/miso-ghc-js/: .gitignore  Makefile  README.md  app.cabal  cabal.project  flake.nix  package.json
broken-frameworks/keyed/miso-ghc-js/dist-bundle/: index.html
broken-frameworks/keyed/miso-ghc-js/src/: Main.hs
broken-frameworks/keyed/miso-ghc-wasm/: Makefile  README.md  app.cabal  flake.nix  package.json
broken-frameworks/keyed/miso-ghc-wasm/dist-bundle/: app.wasm  ghc_wasm_jsffi.js
broken-frameworks/keyed/miso-ghc-wasm/src/: Main.hs
broken-frameworks/keyed/miso-ghc-wasm/static/: index.html  index.js
frameworks/keyed/dioxus/: Cargo.toml  build.sh  index.html  package-lock.json  package.json  trunk.html  trunk.toml
frameworks/keyed/dioxus/bundled-dist/: dioxus_benchmark-2AF7289E-E58F-4668-9666-1072F163C8AA.js  dioxus_benchmark-2AF7289E-E58F-4668-9666-1072F163C8AA_bg.wasm  dioxus_benchmark-2AFAEC62-4CF4-428D-8639-27E5BFDA9008.js  dioxus_benchmark-2AFAEC62-4CF4-428D-8639-27E5BFDA9008_bg.wasm  dioxus_benchmark-DB3CB283-651A-4CAE-80A4-EC37C3BFC210.js  dioxus_benchmark-DB3CB283-651A-4CAE-80A4-EC37C3BFC210_bg.wasm  dioxus_benchmark-E89064E7-2331-4235-94DD-EF3F5D4A839D_bg.wasm  dioxus_benchmark.js  dioxus_benchmark_bg.wasm  index.html
frameworks/keyed/dioxus/src/: main.rs
frameworks/keyed/dominator/: Cargo.toml  package-lock.json  package.json
frameworks/keyed/dominator/bundled-dist/: 1.js  index.js
frameworks/keyed/dominator/src/: lib.rs
frameworks/keyed/kobold/: Cargo.toml  package.json
frameworks/keyed/kobold/bundled-dist/: js-framework-benchmark-kobold.js  js-framework-benchmark-kobold_bg.wasm
frameworks/keyed/kobold/src/: lib.rs
frameworks/keyed/leptos/: Cargo.toml  index.html  package-lock.json  package.json
frameworks/keyed/leptos/bundled-dist/: index.html  js-framework-benchmark-leptos.js  js-framework-benchmark-leptos_bg.wasm
frameworks/keyed/leptos/src/: lib.rs
frameworks/keyed/maple/: Cargo.toml  index.html  package-lock.json  package.json
frameworks/keyed/maple/bundled-dist/: js-framework-benchmark-maple.js  js-framework-benchmark-maple_bg.wasm
frameworks/keyed/maple/src/: lib.rs
frameworks/keyed/mogwai/: Cargo.toml  package-lock.json  package.json
frameworks/keyed/mogwai/bundled-dist/: index.html  js-framework-benchmark-mogwai.js  js-framework-benchmark-mogwai_bg.wasm
frameworks/keyed/mogwai/src/: lib.rs
frameworks/keyed/sauron/: Cargo.toml  index.html  package-lock.json  package.json
frameworks/keyed/sauron/bundled-dist/: js-framework-benchmark-sauron.js  js-framework-benchmark-sauron_bg.wasm
frameworks/keyed/sauron/src/: lib.rs
frameworks/keyed/silkenweb/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json
frameworks/keyed/silkenweb/bundled-dist/: index.html  js-framework-benchmark-silkenweb-3fe0a7efb0dd4880.js  js-framework-benchmark-silkenweb-3fe0a7efb0dd4880_bg.wasm  js-framework-benchmark-silkenweb-9ae7b3c3f59c92b4.js  (+7 more)
frameworks/keyed/sledgehammer/: Cargo.toml  README.md  index.html  package-lock.json  package.json  trunk.html  trunk.toml
frameworks/keyed/spair/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  trunk_index.html
frameworks/keyed/spair-qr/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  package.json  trunk_index.html
frameworks/keyed/sycamore/: Cargo.toml  index.html  package-lock.json  package.json
frameworks/keyed/wasm-bindgen/: .gitignore  Cargo.toml  Trunk.toml  build.js  index.html  index.js  js_framework_benchmark_wasm_bindgen_bg_gc.wasm  js_framework_benchmark_wasm_bindgen_bg_gc_opt.wasm  package-lock.json  package.json  webpack.config.js
frameworks/keyed/yew/: Cargo.toml  package-lock.json  package.json
frameworks/keyed/yew-hooks/: Cargo.toml  package-lock.json  package.json
frameworks/non-keyed/delorean/: Cargo.toml  index.html  package-lock.json  package.json
frameworks/non-keyed/kobold/: Cargo.toml  package-lock.json  package.json
frameworks/non-keyed/korvin/: Cargo.toml  build.sh  index.html  js-framework-benchmark-korvin.js  js-framework-benchmark-korvin_bg.wasm  package-lock.json  package.json  template.html
frameworks/non-keyed/ravel/: Cargo.toml  Trunk.toml  build.sh  index.html  package-lock.json  package.json  trunk.html
frameworks/non-keyed/sauron/: Cargo.toml  package-lock.json  package.json
frameworks/non-keyed/seed/: .gitignore  Cargo.toml  index.html  package-lock.json  package.json
frameworks/non-keyed/stdweb/: Cargo.toml  js-framework-benchmark-stdweb.js  js-framework-benchmark-stdweb.wasm  package-lock.json  package.json
miso-0.15.0.0-keyed/: README.md  default.nix  miso-benchmark-keyed.cabal  package.json
miso-0.15.0.0-keyed/dist-bundle/: all.min.js  index.html
miso-0.15.0.0-keyed/src/: Main.hs
miso-0.18.0.0-keyed/: default.nix  miso-benchmark-keyed.cabal  miso-benchmark-keyed.nix  package.json
miso-0.18.0.0-keyed/dist-bundle/: index.html
miso-0.18.0.0-keyed/src/: Main.hs
miso-ghcjs-keyed/: LICENSE  README.md  index.html  miso-ghcjs.cabal  package.json  stack.yaml
miso-ghcjs-keyed/app/: Main.hs
miso-non-official-v0.4.0.0-non-keyed/: LICENSE  index.html  miso-ghcjs.cabal  package.json
(+7166 files in other folders)
