name:                miso-benchmark-keyed
version:             0.1.0.0
synopsis:            Benchmark of miso
category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:  index.html

executable miso-benchmark-keyed
  hs-source-dirs:     src
  main-is:            Main.hs
  build-depends:      base < 5
                    , containers
                    , random
                    , miso
                    , vector
  default-language:   Haskell2010
