name:                miso-ghcjs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vacationlabs/js-framework-benchmark
license:             BSD3
license-file:        LICENSE
author:              Saurabh Nanda
maintainer:          saurabh@vacationlabs.com
copyright:           2017, Saurabh Nanda
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , miso
  default-language:    Haskell2010

executable miso-ghcjs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , miso-ghcjs
                     , miso
                     , vector
                     , random
  default-language:    Haskell2010

test-suite miso-ghcjs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , miso-ghcjs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vacationlabs/js-framework-benchmark
