name:                miso-ghcjs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vacationlabs/js-framework-benchmark
license:             BSD3
license-file:        LICENSE
author:              Saurabh Nanda
maintainer:          saurabh@vacationlabs.com
copyright:           2017, Saurabh Nanda
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable miso-ghcjs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2
  cpp-options:         -DGHCJS_BROWSER                                                                
  build-depends:       base
                     , miso
                     , vector
                     , random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vacationlabs/js-framework-benchmark
