[package]
name = "js-framework-benchmark-wasm-bindgen"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.76"
js-sys = "0.3.53"

[dependencies.web-sys]
version = "0.3.53"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
lto = true
panic = "abort"
