[package]
name = "dioxus_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.0", features = ["web"] }
js-sys = "*"
slab = "0.4.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
