[package]
name = "dioxus_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/ealmloff/dioxus", branch = "restore-comparator" }
dioxus-web = { git = "https://github.com/ealmloff/dioxus", branch = "restore-comparator", default-features = false }
js-sys = "*"
slab = "0.4.8"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
