[package]
name = "js-framework-benchmark-kobold"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
kobold = "0.7.0"
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "HtmlInputElement",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']