[package]
authors = ["Greg Johnston"]
edition = "2021"
name = "js-framework-benchmark-leptos"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.7", features = ["js"] }
rand = { version = "0.8.5", features = ["small_rng"] }
leptos = { version = "0.0.1", features = ["csr"]}
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = ["Window", "Document"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
