[package]
authors = ["Luke Chu"]
edition = "2018"
name = "js-framework-benchmark-maple"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
maple-core = "0.4"
rand = {version = "0.7.3", features = ["wasm-bindgen", "small_rng"]}
wasm-bindgen = "0.2.73"
web-sys = {version = "0.3.50", features = ["Window", "Document"]}

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
