[package]
name = "sledgehammer-benchmark"
version = "0.2.0"
edition = "2021"

[dependencies]
sledgehammer = "0.2.0"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Window',
  'console',
]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
