[package]
name = "spair_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spair = { git = "https://github.com/aclueless/spair.git", features = ["keyed-list"] }
getrandom = { version = "0.2.6", features = ["js"] }
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release]
lto = true
codegen-units = 1
