[package]
authors = ["Luke Chu"]
edition = "2018"
name = "js-framework-benchmark-sycamore"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = {version = "0.2", features = ["js"]}
rand = {version = "0.8", features = ["small_rng"]}
sycamore = "0.5.1"
wasm-bindgen = "0.2.74"
web-sys = {version = "0.3.51", features = ["Window", "Document"]}

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
