[package]
authors = ["Luke Chu"]
edition = "2021"
name = "js-framework-benchmark-sycamore"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2.10", features = ["js"] }
rand = { version = "0.8.5", features = ["small_rng"] }
sycamore = "0.9.0-beta.2"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "Document"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
