[package]
name = "js-framework-benchmark-wasm-bindgen"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.29"
js-sys = "0.3.5"
wee_alloc = "0.4.2"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'DomTokenList',
  'Element',
  'Event',
  'EventTarget',
  'HtmlElement',
  'Node',
  'Window',
]

[profile.release]
lto = true
opt-level = "z"
debug = false
panic = "abort"
