[package]
name = "js-framework-benchmark-yew"
version = "1.0.0"
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.7.3", features = ["wasm-bindgen", "small_rng"] }
wasm-bindgen = "0.2.62"
yew = "0.17.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
