[package]
name = "js-framework-benchmark-yew"
version = "1.0.0"
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8.4", features = ["small_rng"] }
getrandom = { version = "0.2.1", features = ["js"] }
wasm-bindgen = "0.2.78"
yew = "0.18"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
