[package]
name = "js-framework-benchmark-yew"
version = "1.0.0"
authors = ["Isamu Mogi <isamu@leafytree.jp>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.9", features = ["small_rng"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window"]}
yew = { version = "0.23.0", features = ["csr"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
