[package]
name = "js-framework-benchmark-delorean"
authors = ["Juan Aguilar Santillana <mhpoin@gmail.com>"]
version = "0.0.1"
publish = false
edition = "2018"

[workspace]
members = ["."]

[dependencies]
delorean = "0.2.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = {version = "0.7", features = ["small_rng"]}

wasm-bindgen = "0.2"
js-sys = "0.3"
[dependencies.web-sys]
version = "0.3"
features = [
  "Node",
  "Document",
  "Window",
  "Element",
  "HtmlElement",
  "EventTarget",
  "Event",
  "HtmlCollection"
]

[profile.release]
lto = true
panic = "abort"

[lib]
crate-type = ["cdylib"]
