[package]
name = "js-framework-benchmark-sauron"
version = "0.1.0"
authors = ["Markus Kohlhase <mail@markus-kohlhase.de>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = { version = "0.8.5", features = ["small_rng"] }
getrandom = { version = "0.2.7", features = ["js"] }
wasm-bindgen = "0.2.82"
web-sys = { version = "0.3.59", features = ["Window"] }
sauron = "0.50.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
