[package]
name = "js-framework-benchmark-seed"
version = "1.0.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.6.0"
wasm-bindgen = "0.2.58"
rand = {version = "0.7.3", features = ["wasm-bindgen", "small_rng"]}

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
