[package]
name = "js-framework-benchmark-seed"
version = "1.0.0"
authors = ["Martin Kavík <martin@kavik.cz>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.2"
seed = "0.8.0"
wasm-bindgen = "0.2.69"

[dependencies.getrandom]
version = "0.2.2"
default-features = false
features = ["js"]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O4']
